improve shacl split